<resources>
    <string name="app_name">ThinkQuick</string>
    <string name="design_credits"><a href='https://www.vecteezy.com' target='_blank'>Design Credits: Vecteezy!</a></string>
    <string name="value_vs">VS</string>
    <string name="string_beatTheWinner">BEAT THE WINNER</string>
    <string name="value_skip">SKIP</string>
    <string name="timeView_title">Time View</string>
    <string name="timeView_description">Don\'t let it reach zero or you will loose one life</string>
    <string name="lifeView_title">Life View</string>
    <string name="lifeView_description">Don\'t let it hit zero or you will be gameover!</string>
    <string name="labelVs_title">Situation</string>
    <string name="labelVs_description">Shows a Rock Paper Scissor situation</string>
    <string name="challenge_title">Challenge</string>
    <string name="challenge_description">Try and solve this challenge</string>
    <string name="skip_title">Skip Option</string>
    <string name="skip_description">You can skip a challenge but you will loose points</string>
    <string name="scissor_title">Answer</string>
    <string name="scissor_description">Paper beats Rock, so the answer is scissor</string>
    <string name="points_title">Points</string>
    <string name="points_description">Shows your current score</string>
    <string name="gameover_points_description">Points:</string>
    <string name="menu_btn_play">PLAY</string>
    <string name="menu_btn_highscore">HIGHSCORE</string>
    <string name="menu_btn_settings">SETTINGS</string>
    <string name="distribution_check_tutorial">Show tutorial on next game</string>
    <string name="distribution_clear_highscore">Clear highscore</string>
    <string name="distribution_btn_back">BACK TO MENU</string>
    <string name="result_correct">Correct</string>
    <string name="result_wrong">Wrong</string>
    <string name="countdown_go">Go!</string>
    <string name="point_distribution">Point distribution</string>
    <string name="settings">Settings</string>
    <string name="game_mode_btn_endless">Endless</string>
    <string name="game_mode_btn_hardcore">Hardcore</string>
    <string name="game_mode_btn_surprise">Surprise</string>
    <string name="delete_highscore_title">Delete highscore</string>
    <string name="delete_highscore">Do you really want to clear your highscore history?</string>
    <string name="delete_approve">Yes</string>
    <string name="delete_deny">No</string>
    <string name="gameover_info_text">Tap to continue</string>
</resources>